<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/group1">

    <item android:id="@+id/reviews"
        android:title="@string/reviews_text"
        android:icon="@drawable/star"/>

    <item android:id="@+id/favorite"
        android:title="@string/favorite_text"
        android:icon="@drawable/favorite"/>

    <item android:id="@+id/search"
        android:title="@string/search_text"
        android:icon="@drawable/search"/>
</group>

    <group android:id="@+id/group2">

        <item android:id="@+id/profile"
            android:title="@string/profile_text"
            android:icon="@drawable/profile_nav_icon"/>

        <item android:id="@+id/settings"
            android:title="@string/settings_text"
            android:icon="@drawable/settings"/>
    </group>
</menu>