<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="@dimen/margin_10"
            android:id="@+id/iv_book_cover"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/angels"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/book_cover_photo_content_description"
            />
        <TextView
            android:id="@+id/tv_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title_place_holder"
            app:layout_constraintStart_toEndOf="@id/iv_book_cover"
            app:layout_constraintTop_toTopOf="@id/iv_book_cover"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>
        <TextView
            android:id="@+id/tv_book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author_place_holder"
            app:layout_constraintStart_toEndOf="@id/iv_book_cover"
            app:layout_constraintTop_toBottomOf="@id/tv_book_title"
            android:layout_marginTop="@dimen/margin_10"
            style="@style/TextAppearance.AppCompat.Body1"/>

        <Button
            android:id="@+id/btn_want_to_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/want_to_read_text"


            android:textAllCaps="false"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="9dp"
            />

        <androidx.appcompat.widget.AppCompatImageButton

            android:id="@+id/ib_remove"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:backgroundTint="@color/transparent"
            android:tint="@color/red"
            android:src="@drawable/remove_icon"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/btn_want_to_read"
            app:layout_constraintStart_toEndOf="@id/btn_want_to_read"
            />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:progressTint="@color/gold"

            app:layout_constraintTop_toBottomOf="@id/btn_want_to_read"
            app:layout_constraintEnd_toEndOf="@id/btn_want_to_read"
            app:layout_constraintStart_toStartOf="@id/btn_want_to_read"
            android:layout_marginTop="@dimen/margin_10"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>